feat: added ability to generate fines reports
